# Canvas-accessibility-buddy

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: faq.md  getting-started.md  how-to-guides.md  use-cases.md
docs/plans/: 2026-03-02-scan-dashboard-ux-design.md
src/a11yscope/: sanitize.py
src/a11yscope/web/: app.py  queue_manager.py
src/a11yscope/web/api/: key_routes.py
src/a11yscope/web/middleware/: security_headers.py
src/a11yscope/web/static/: app.js  index.html
src/accessiflow/: config.py
src/accessiflow/audit_log/: __init__.py  logger.py  schemas.py
src/accessiflow/auth/: __init__.py  backend.py  dependencies.py  jwt.py  middleware.py  models.py  oidc.py  password.py  saml.py
src/accessiflow/db/: __init__.py  engine.py  models.py  seed.py  session.py
src/accessiflow/db/migrations/: env.py
src/accessiflow/db/migrations/versions/: 001_initial_schema.py
src/accessiflow/web/: app.py  session.py
src/accessiflow/web/api/: admin_routes.py  ai_routes.py  audit_routes.py  auth_routes.py  config_routes.py  course_routes.py  fix_routes.py  report_routes.py  standards_routes.py  ws.py
src/accessiflow/web/static/: admin.js  app.js  index.html  login.js
src/canvas_a11y/: cli.py  config.py  models.py
src/canvas_a11y/ai/: __init__.py  anthropic_provider.py  base.py  google_provider.py  grok_provider.py  openai_provider.py  prompts.py  registry.py
src/canvas_a11y/canvas/: content_fetcher.py
src/canvas_a11y/remediation/: ai_remediator.py  document_pipeline.py
src/canvas_a11y/reporting/: html_report.py  vpat_report.py
src/canvas_a11y/reporting/templates/: report.html.j2  vpat_report.html.j2
src/canvas_a11y/standards/: __init__.py  mapping.py  section508.py  vpat.py  wcag21.py
src/canvas_a11y/web/: app.py  audit_runner.py  models.py  session.py
src/canvas_a11y/web/api/: ai_routes.py  config_routes.py  report_routes.py
src/canvas_a11y/web/static/: app.js  index.html
tests/: test_ai_providers.py  test_ai_remediator.py  test_course_metadata.py  test_integration_dashboard.py  test_media_checks.py  test_queue_manager.py  test_sanitize.py  test_security_audit.py  test_security_headers.py  test_standards.py  test_vpat_report.py
tests/e2e/: conftest.py  test_ai_routes.py  test_health.py  test_vpat_download.py
